Quinceavo commit, rama principal. Se organiza el código

--- a/src/app/components/asistencia/asistencia.component.html
+++ b/src/app/components/asistencia/asistencia.component.html
@@ -11,9 +11,6 @@
                     <li><a href="#">Cerrar sesion</a></li>
                     <li><a href="#">Actualizar Empleado</a></li>
                     <li><a href="#">Actualizar Perfil</a></li>
-                    <!--li><a href="#">Incapacidad</a></li>
-                    <li><a href="#">Inventario</a></li>
-                    <li><a href="#">Borrar Empleado</a></li-->
                 </ul>
             </nav>
     </header>
@@ -42,7 +39,7 @@
 
             <div class="contenerdo_formulario">
 
-                <!--animacion de gargando imagen-->
+                <!--Animación de cargando.-->
                 <div class="cargando-overlay" *ngIf="loading">
                     <div class="cargando-alert">
                         <div class="spinner"></div>
