--- a/src/app/components/cuenta-empleado/cuenta-empleado.component.html
+++ b/src/app/components/cuenta-empleado/cuenta-empleado.component.html
@@ -12,16 +12,12 @@
                     <li><a href="#">Cerrar sesion</a></li>
                     <li><a href="#">Actualizar Empleado</a></li>
                     <li><a href="#">Actualizar Perfil</a></li>
-                    <!--li><a href="#">Incapacidad</a></li>
-                    <li><a href="#">Inventario</a></li>
-                    <li><a href="#">Borrar Empleado</a></li-->
                 </ul>
             </nav>
     </header>
     <div  class="contenedor">
        
       <div class="columna-izquierda" #columnaizquierda></div>
-        
         
       <div class="columna-central" #columnacentral>
           <div class="estilo">
@@ -45,17 +41,10 @@
           <br><br><br><br>
           <div>
             <h2 class="h2">Registra la cuenta bancaria de {{ nom_empleado }}</h2>
-
           </div>
-          <br><br><br>
-          <br><br><br><br><br><br>
-          <br><br><br><br><br><br><br><br><br><br>
-          <br><br><br><br><br><br><br><br><br><br>
-
-          
-
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           <div class="container">
-            <!--animacion de gargando imagen-->
+            <!--Animación de cargando.-->
             <div class="cargando-overlay" *ngIf="loading">
               <div class="cargando-alert">
                   <div class="spinner"></div>
