--- a/src/app/components/detalle-empleado/detalle-empleado.component.html
+++ b/src/app/components/detalle-empleado/detalle-empleado.component.html
@@ -97,31 +97,38 @@
                                         <p><strong>fecha: </strong>  2024-01-02</p>
                                         <p><strong>hora registro: </strong> 07:00:00 </p>
                                         
-                                        <table  class="tablacontener">
-                                            <thead>
-                                                <tr class="filatitulo">
-                                                    <th><h1 class="mes"> Mes </h1></th>
-                                                    <th><h1 class="fecha"> Fecha </h1></th>
-                                                    <th><h1 class="horaR"> Hora de registro </h1></th>
-                                                </tr>
-                
-                                            </thead>
-                                            <tbody>
-                                                <tr class="filacontenido">
-                                                    <td class="mes-contenido"> 12 </td>
-                                                    <td class="fecha-contenido">  2024-01-02/ / </td>
-                                                    <td class="horaR-contenido">  7:00:00 </td>
-                                                </tr>
-                                                
-                                              
-                                            </tbody>
-                                        </table><br>
+                                        <div class="contenedo-mes">
+                                            <table  class="tablacontener">
+                                                <thead>
+                                                    <tr class="filatitulo">
+                                                        <th><h1 class="th-class"> Mes </h1></th>
+                                                        <th><h1 class="th-class"> Fecha </h1></th>
+                                                        <th><h1 class="th-class"> Hora de registro </h1></th>
+                                                    </tr>
+                    
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class"> 12 </td>
+                                                        <td class="td-class">  2024-01-02/ / </td>
+                                                        <td class="td-class">  7:00:00 </td>
+                                                    </tr>
+                                                    
+                                                  
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <br>
                                         <button class="butt-abrir"> Abrir <i class="fa-solid fa-window-restore fa-beat-fade iconoabrir"></i></button>
                                     </div>
 
                                     <h1 class="textitulo">Incapacidad</h1>
 
                                     <div class="incapacidad">
+
+                                        <button class="butt-abrir"> Abrir <i class="fa-solid fa-window-restore fa-beat-fade iconoabrir"></i></button>
+
+
                                         <div class="contenedor-incapacidad">
                                             <p><strong>fecha de registro: </strong> 2024-01-02</p>
                                             <p><strong>fecha de incapacidad: </strong>2024-01-02</p>
@@ -172,32 +179,35 @@
                                         <p><strong>horas extras: </strong> 2 </p>
                                         <p><strong>total: </strong> 10 </p>
 
-                                        <table class="tablacontener">
-                                            <thead>
-                                                <tr class="filatitulo">
-                                                    <th><h1 class="fecha">Fecha:</h1></th>
-                                                    <th><h1 class="horasExtras">horas Extras:</h1></th>
-                                                    <th><h1 class="total">Total horas:</h1></th>
-                                                </tr>                                               
-                                            </thead>
-                                            <tbody>
-                                                <tr class="filacontenido">
-                                                    <td class="fecha-contenido"> 2024-01-02</td>
-                                                    <td class="fechaExtas-contenido"> 1 </td>
-                                                    <td class="total-contenido"> 1 </td>
-                                                </tr>
-                                                <tr class="filacontenido">
-                                                    <td class="fecha-contenido"> 2024-01-02</td>
-                                                    <td class="fechaExtras-contenido"> 3 </td>
-                                                    <td class="total-contenido"> 4 </td>
-                                                </tr>
-                                                <tr class="filacontenido">
-                                                    <td class="fecha-contenido"> 2024-01-02</td>
-                                                    <td class="horasextras-contenido"> 4 </td>
-                                                    <td class="total-contenido"> 8 </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                        <div class="contenedo-mes">
+                                            <table class="tablacontener">
+                                                <thead>
+                                                    <tr class="filatitulo">
+                                                        <th><h1 class="th-class">Fecha:</h1></th>
+                                                        <th><h1 class="th-class">horas Extras:</h1></th>
+                                                        <th><h1 class="th-class">Total horas:</h1></th>
+                                                    </tr>                                               
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class"> 2024-01-02</td>
+                                                        <td class="td-class"> 1 </td>
+                                                        <td class="td-class"> 1 </td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class"> 2024-01-02</td>
+                                                        <td class="td-class"> 3 </td>
+                                                        <td class="td-class"> 4 </td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class"> 2024-01-02</td>
+                                                        <td class="td-class"> 4 </td>
+                                                        <td class="td-class"> 8 </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                       
                                         <button class="butt-abrir"> Abrir <i class="fa-solid fa-window-restore fa-beat-fade iconoabrir"></i></button>
 
 
@@ -205,35 +215,67 @@
 
                                     <h1 class="textitulo">Inasistencias </h1>
 
+                                    
+
                                     <div class="inasistencia">
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
+
+                                        <button class="butt-abrir"> Abrir <i class="fa-solid fa-window-restore fa-beat-fade iconoabrir"></i></button>
+
+                                        <p><strong>fecha: </strong> 2024-01-02</p>
+
+                                        <div class="contenedo-mes">
+                                            <table class="tablacontener">
+                                                <thead>
+                                                    <tr class="filatitulo">
+                                                        <th><h1 class="th-class">Mes </h1></th>
+                                                        <th><h1 class="th-class">Fecha </h1></th>
+                                                    </tr>                                               
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">12</td>
+                                                        <td class="td-class">2024-01-02</td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">12</td>
+                                                        <td class="td-class">2024-01-04</td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">12</td>
+                                                        <td class="td-class">2024-01-03</td>
+                                                    </tr>
+                                                </tbody>
+                                                
+                                            </table>
                                         </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
-                                        </div>
-                                        <div class="contenedor-fecha-inasistencia">
-                                            <p><strong>fecha: </strong> 2024-01-02</p>
+                                        <div class="contenedo-mes">
+                                            <table class="tablacontener">
+                                                <thead>
+                                                    <tr class="filatitulo">
+                                                        <th><h1 class="th-class">Mes </h1></th>
+                                                        <th><h1 class="th-class">Fecha </h1></th>
+                                                    </tr>                                               
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">1</td>
+                                                        <td class="td-class">2024-01-02</td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">1</td>
+                                                        <td class="td-class">2024-01-04</td>
+                                                    </tr>
+                                                    <tr class="filacontenido">
+                                                        <td class="td-class">1</td>
+                                                        <td class="td-class">2024-01-03</td>
+                                                    </tr>
+                                                </tbody>
+                                                
+                                            </table>
                                         </div>
 
+
+                                      
                                     </div>
                                 </div>
                             </div>
